--- a/css/addons/unraid/login-page/fallout/dirty_terminal.css
+++ b/css/addons/unraid/login-page/fallout/dirty_terminal.css
@@ -1,8 +1,8 @@
-@import url("/css/addons/unraid/login-page/fallout/fallout-base.css");
+@import url("/theme.park/css/addons/unraid/login-page/fallout/fallout-base.css");
 :root {
     --main-bg-color: url(/css/addons/unraid/login-page/fallout/wallpaper/rocky-wall.png),
     url(/css/addons/unraid/login-page/fallout/wallpaper/terminal.jpg) center center/cover no-repeat fixed;
-    --logo: url(/css/addons/unraid/login-page/fallout/logo/vault-tec_green.png) center no-repeat;
+    --logo: url(/css/addons/unraid/login-page/fallout/logo/lavendar_logo.png) center no-repeat;
     --text-color: #14F074;
     --input-color: #14F074;
     --link-color: #14F074;
