--- a/css/addons/unraid/login-page/fallout/dirty_terminal2.css
+++ b/css/addons/unraid/login-page/fallout/dirty_terminal2.css
@@ -3,15 +3,15 @@
     --main-bg-color: url(/css/addons/unraid/login-page/fallout/wallpaper/rocky-wall.png),
     url(/css/addons/unraid/login-page/fallout/wallpaper/terminal2.jpg) center center/cover no-repeat fixed;
     --logo: url(/css/addons/unraid/login-page/fallout/logo/lavendar_logo.png) center no-repeat;
-    --text-color: #14F074;
-    --input-color: #14F074;
-    --link-color: #14F074;
-    --link-color-hover: #0C833D;
-    --case-color: #14F074;
-    --button-text-color: #14F074;
+    --text-color: #7A5F99;
+    --input-color: #7A5F99;
+    --link-color: #7A5F99;
+    --link-color-hover: #674483;
+    --case-color: #7A5F99;
+    --button-text-color: #7A5F99;
     --button-text-color-hover: #FFFFFF;
-    --button-color: #14F074;
-    --button-color2: #0C833D;
+    --button-color: #7A5F99;
+    --button-color2:#674483;
     --input-font: 'Share Tech Mono', monospace;
     --text-font: 'Share Tech Mono', monospace;
     --div-background-color-15: rgba(0, 0, 0, 0.25);
